third_party/move/evm/move-to-yul/tests/GlobalVectors.exp


!! Move-To-Yul Diagnostics:
 error: type `T<integer>` does not have expected ability `key`
   ┌─ tests/GlobalVectors.move:16:31
   │
16 │         move_to(&sign(@0x42), T { v });
   │                               ^^^^^^^

error: type `T<vector<integer & integer>>` does not have expected ability `key`
   ┌─ tests/GlobalVectors.move:42:31
   │
42 │         move_to(&sign(@0x42), T { v });
   │                               ^^^^^^^

error: type `T<integer>` does not have expected ability `key`
   ┌─ tests/GlobalVectors.move:56:31
   │
56 │         move_to(&sign(@0x42), T { v: copy v });
   │                               ^^^^^^^^^^^^^^^

error: type `T<integer>` does not have expected ability `key`
   ┌─ tests/GlobalVectors.move:91:31
   │
91 │         move_to(&sign(@0x42), T { v });
   │                               ^^^^^^^

error: type `T<vector<integer & integer>>` does not have expected ability `key`
    ┌─ tests/GlobalVectors.move:124:31
    │
124 │         move_to(&sign(@0x42), T { v });
    │                               ^^^^^^^

error: type `T<integer>` does not have expected ability `key`
    ┌─ tests/GlobalVectors.move:140:31
    │
140 │         move_to(&sign(@0x42), T { v });
    │                               ^^^^^^^

error: type `T<integer>` does not have expected ability `key`
    ┌─ tests/GlobalVectors.move:171:31
    │
171 │         move_to(&sign(@0x42), T { v });
    │                               ^^^^^^^

error: type `T<integer>` does not have expected ability `key`
    ┌─ tests/GlobalVectors.move:188:31
    │
188 │         move_to(&sign(@0x42), T { v });
    │                               ^^^^^^^
